k8s_base/base/gitea/gitea_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitea-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - gitea.nuts.yantao0527.me
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-yantao0527
    hosts:
    - gitea.nuts.yantao0527.me
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea
spec:
  hosts:
  - gitea.nuts.yantao0527.me
  gateways:
  - gitea-gateway
  http:
  - route:
    - destination:
        host: git-gitea-http
        port:
          number: 3000
---
