k8s_base/base/gitea/gitea_gateway_tcp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitea-gateway-tcp
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 32022
      name: tcp-gitea-ssh
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea-tcp
spec:
  hosts:
  - "*"
  gateways:
  - gitea-gateway-tcp
  tcp:
  - match:
    - port: 32022
    route:
    - destination:
        host: git-gitea-ssh
        port:
          number: 32022
---
